ajout de la formation de afritechhub

--- a/index.html
+++ b/index.html
@@ -492,7 +492,7 @@
                         <img src="img/arrow-down.svg" alt="arrow-down">
                     </div>
                     <div class="answer">
-                        <!-- <div class="experience-cards-container-card">
+                        <div class="experience-cards-container-card">
                             <div class="experience-cards-container-card-img">
                                 <a href="https://afritechh.com/" target="_blank"><img src="img/afritechhub.png"
                                         alt="AfritechHub" style="width: 300px;"></a>
@@ -513,7 +513,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="line"></div> -->
+                        <div class="line"></div>
                         <div class="experience-cards-container-card">
                             <div class="experience-cards-container-card-img">
                                 <a href="https://mentor-moi.netlify.app/fr/mentors/623784765dada20004549229"
