ajout du site buynft

--- a/index.html
+++ b/index.html
@@ -416,7 +416,7 @@
                                         alt="LaMater"></a>
                             </div>
                             <div class="experience-cards-container-card-container">
-                                <h3>Stagiaire FrontEnd / Lead Developer</h3>
+                                <h3>Stagiaire FrontEnd Developer</h3>
                                 <p class="experience-cards-container-card-container-description">
                                     <b>Mars 2022 • Mai 2022</b>
                                 <p>LA MATER • Remote</p>
@@ -467,7 +467,7 @@
                                 <a href="https://www.lohce.com/" target="_blank"><img src="img/lohce.jpg" alt="LOHCE"></a>
                             </div>
                             <div class="experience-cards-container-card-container">
-                                <h3>Stagiaire Lead Developer</h3>
+                                <h3>Stagiaire FrontEnd Developer</h3>
                                 <p class="experience-cards-container-card-container-description">
                                     <b>Avril 2022 • Juin 2022</b>
                                 <p>LOHCE • Remote</p>
@@ -549,6 +549,9 @@
                 </a>
                 <a href="https://twitter-clone-ten-flame.vercel.app/" target="_blank">
                     <img src="projets/twitter-clone.png" alt="camerdjoss">
+                </a>
+                <a href="https://buy-nft.vercel.app/" target="_blank">
+                    <img src="projets/buynft.png" alt="buynft">
                 </a>
                 <a href="https://pokedex-six-iota.vercel.app/" target="_blank">
                     <img src="projets/pokedex.png" alt="pokedex">
