--- a/index.html
+++ b/index.html
@@ -79,10 +79,10 @@
                     < LN />
                 </a></li>
             <li><a href="#about">Moi</a></li>
-            <li><a href="#education">Education</a></li>
             <li><a href="#skillest">Compétences</a></li>
             <li><a href="#services">Services</a></li>
             <li><a href="#experience">Expérience</a></li>
+            <li><a href="#education">Education</a></li>
             <li><a href="#other">Autres</a></li>
             <li><a href="https://drive.google.com/file/d/1tj6WwxPgAyW0Zic0zfXo5LKliPvxlxab/view?usp=drivesdk"
                     target="_blank">
@@ -110,10 +110,10 @@
         </div>
         <ul class="navigation-page">
             <li><a href="#about">Moi</a></li>
-            <li><a href="#education">Education</a></li>
             <li><a href="#skillest">Compétences</a></li>
             <li><a href="#services">Services</a></li>
             <li><a href="#experience">Expérience</a></li>
+            <li><a href="#education">Education</a></li>
             <li><a href="#other">Autres</a></li>
         </ul>
         <ul class="navigation-socials">
@@ -145,12 +145,15 @@
     <header class="header" id="header">
         <div class="containers">
             <div class="header-img">
-                <img src="img/ln.png" alt="">
+                <img src="img/ln.png" alt="ma photo">
             </div>
             <div class="header-container">
                 <h1 class="header-container-title">Salut, moi c'est Leonel NGOYA<img src="img/Hi.gif"></h1>
                 <h1 class="header-container-subtitle">Développeur FrontEnd</h1>
                 <h2>Ici c'est mon site personnel, où vous y trouverez toutes les informations me concernant.</h2>
+                <img src="img/LN.png" alt="logo" class="logo">
+                <div class="fade-box"></div>
+                <p class="fade-text">Appelle moi LN</p>
             </div>
         </div>
     </header>
@@ -193,71 +196,6 @@
             <iframe src="https://open.spotify.com/embed/playlist/1fciPOQsvJFvA22F9PeEOU" width="100%" height="380"
                 frameBorder="0" allowtransparency="true" allow="encrypted-media"
                 class="about-hobbies-playlist"></iframe>
-        </div>
-    </div>
-
-    <div class="education" id="education">
-        <div class="education-cards">
-            <div class="education-cards-title">
-                <h1>Mon éducation</h1>
-                <h2>Ici je vous présente mon parcours scolaire et académique.</h2>
-            </div>
-            <div class="education-cards-container">
-                <div class="education-cards-container-card">
-                    <div class="education-cards-container-card-img">
-                        <img src="img/ccnb.png" alt="Clirap">
-                    </div>
-                    <div class="education-cards-container-card-container">
-                        <h3>2021 • <i>en cours</i></h3>
-                        <p class="ecucation-cards-container-card-container-description">
-                            <b>DEC (Diplôme d'études collégiales) TECHNOLOGIE DE L'INFORMATION ET DES COMMUNICATIONS
-                                (TIC)</b>
-                        <p>Institut Universitaire de la Côte • Douala</p>
-                        <h4>Diplôme délivré par le Collège communautaire du Nouveau-Brunswick (CCNB-Canada)</h4>
-                        </p>
-                    </div>
-                </div>
-                <div class="education-cards-container-card">
-                    <div class="education-cards-container-card-img">
-                        <img src="img/clirap.png" alt="Clirap">
-                    </div>
-                    <div class="education-cards-container-card-container">
-                        <h3>2020 • 2021</h3>
-                        <p class="ecucation-cards-container-card-container-description">
-                            <b><a href="https://drive.google.com/file/d/19BSao3K4I22ht_T8neRqURQU7KzvXidO/view?usp=sharing"
-                                    target="_blank">B2 - LANGUE ITALIENNE</a></b>
-                        <p>Clirap Educationnal • Yaoundé</p>
-                        <h4>Diplôme délivré par l' Université de Rome 3 ( en Italie )</h4>
-                        </p>
-                    </div>
-                </div>
-                <div class="education-cards-container-card">
-                    <div class="education-cards-container-card-img">
-                        <img src="img/uy1.png" alt="UY1">
-                    </div>
-                    <div class="education-cards-container-card-container">
-                        <h3>2019 • 2020</h3>
-                        <p class="ecucation-cards-container-card-container-description">
-                            <b>INFORMATIQUE NIVEAU 1</b>
-                        <p>Université de Yaoundé 1 • Yaoundé</p>
-                        </p>
-                    </div>
-                </div>
-                <div class="education-cards-container-card">
-                    <div class="education-cards-container-card-img">
-                        <img src="img/lybibaf-ndg.png" alt="Lybibaf Ndiengdam">
-                    </div>
-                    <div class="education-cards-container-card-container">
-                        <h3>2018 • 2019</h3>
-                        <p class="ecucation-cards-container-card-container-description">
-                            <b><a href="https://drive.google.com/file/d/1zj25lC7wQiTWIWn_ZrDjoAzrn3VzSiiA/view?usp=sharing"
-                                    target="_blank">BACCALAUREAT C</a></b>
-                        <p>Lycée bilingue de Bafoussam ndiengdam • Bafoussam</p>
-                        <h4>Diplôme délivré par le MINESEC</h4>
-                        </p>
-                    </div>
-                </div>
-            </div>
         </div>
     </div>
 
@@ -356,28 +294,58 @@
                         <img src="img/arrow-down.svg" alt="arrow-down">
                     </div>
                     <div class="answer">
-                        <!-- <div class="experience-cards-container-card">
-                    <div class="experience-cards-container-card-img">
-                        <a href="" target="_blank"><img src="img/winexam.svg" alt="WINEXAM" style="width: 300px;"></a>
-                    </div>
-                    <div class="experience-cards-container-card-container">
-                        <h3>FrontEnd Developer</h3>
-                        <p class="experience-cards-container-card-container-description">
-                            <b>Décembre 2021 • Présent</b>
-                            <p>WINEXAM • Remote</p>
-                            
-                        </p>
-                    </div>
-                    
-                     <div class="experience-cards-container-card-description">   
-                        <h4>Projet en équipe qui m'a permis de mieux travailler en équipe et aussi à améliorer ma connaissance sur le framework VueJS tout en communiquant avec un backend fait en Python.</h4>
+
+                        <!--
+                            <div class="experience-cards-container-card">
+                            <div class="experience-cards-container-card-img">
+                                <a href="" target="_blank"><img src="img/servicechanger.png" alt="WINEXAM"
+                                        style="width: 300px;"></a>
+                            </div>
+                            <div class="experience-cards-container-card-container">
+                                <h3>Integrateur web</h3>
+                                <p class="experience-cards-container-card-container-description">
+                                    <b>Avril 2022 • Mai 2022</b>
+                                <p>Service Changer • Remote</p>
+
+                                </p>
+                            </div>
+
+                            <div class="experience-cards-container-card-description">
+                                <h4>Mon but principal etatir d' integrer un template dans une application Angular</h4>
                                 <div>
-                                    <button>VUE JS</button> <button>SCSS</button> <button>TRAVAIL EN EQUIPE</button> <button>GIT</button> <button>GITHUB</button>
+                                    <button>HTML</button> <button>SCSS</button> <button>ANGULAR</button> <button>TRAVAIL EN EQUIPE</button>
+                                    <button>GIT</button>
                                 </div>
                             </div>
-                </div>
-                <div class="line"></div>
-             -->
+                        </div>
+                        <div class="line"></div>
+                        <div class="experience-cards-container-card">
+                            <div class="experience-cards-container-card-img">
+                                <a href="" target="_blank"><img src="img/winexam.svg" alt="WINEXAM"
+                                        style="width: 300px;"></a>
+                            </div>
+                            <div class="experience-cards-container-card-container">
+                                <h3>FrontEnd Developer</h3>
+                                <p class="experience-cards-container-card-container-description">
+                                    <b>Décembre 2021 • Présent</b>
+                                <p>WINEXAM • Remote</p>
+
+                                </p>
+                            </div>
+
+                            <div class="experience-cards-container-card-description">
+                                <h4>Projet en équipe qui m'a permis de mieux travailler en équipe et aussi à améliorer
+                                    ma connaissance sur le framework VueJS tout en communiquant avec un backend fait en
+                                    Python.</h4>
+                                <div>
+                                    <button>VUE JS</button> <button>SCSS</button> <button>TRAVAIL EN EQUIPE</button>
+                                    <button>GIT</button> 
+                                </div>
+                            </div>
+                        </div>
+                        <div class="line"></div>
+                        -->
+
                         <div class="experience-cards-container-card">
                             <div class="experience-cards-container-card-img">
                                 <img src="img/freelance.png" alt="FREELANCE">
@@ -385,7 +353,7 @@
                             <div class="experience-cards-container-card-container">
                                 <h3>FrontEnd Developer</h3>
                                 <p class="experience-cards-container-card-container-description">
-                                    <b>Juin 2021 • Présent</b>
+                                    <b>Depuis Juin 2021</b>
                                 <p>Freelance • Douala - Remote</p>
                                 </p>
                             </div>
@@ -609,22 +577,70 @@
                 <p> Vous pouvez voir tout mes autres side projets OpenSource sur mon github.</p>
                 <a href="https://github.com/ln-dev7" target="_blank"><button>OUVRIR MON GITHUB</button></a>
             </div>
-            <div class="experience-cards-formation-web">
-                <p> J'ai un cour sur VueJS que vous pouvez lire.</p>
-                <a href="https://ln-dev.notion.site/Apprendre-Vue2-c8423f6326f0415b934c2863c44a3b6c" target="_blank"
-                    class="form-web">
-                    <img src="img/vue-js.jpg" alt="COURS VUEJS">
-                    <span>Consultez mon cours sur VueJS</span>
-                </a>
-                <br>
-                <p> J'ai une formation sur ma chaine <a href="https://youtube.com/channel/UCocpsPbVlb4bGYZKa-VXySg"
-                        target="_blank" style="font-weight: bold;">Youtube</a> en
-                    HTML5 et CSS3 que vous pouvez consulter.</p>
-                <a href="https://youtube.com/playlist?list=PLSPOY060zfMnG2JJ3aqYIMKWYQYNVt881" target="_blank"
-                    class="form-web">
-                    <img src="img/formation-html5-css3.jpg" alt="FORMATION HTML5 CSS3">
-                    <span>Consultez ma formation HTML5 CSS3</span>
-                </a>
+        </div>
+    </div>
+
+    <div class="education" id="education">
+        <div class="education-cards">
+            <div class="education-cards-title">
+                <h1>Mon éducation</h1>
+                <h2>Ici je vous présente mon parcours scolaire et académique.</h2>
+            </div>
+            <div class="education-cards-container">
+                <div class="education-cards-container-card">
+                    <div class="education-cards-container-card-img">
+                        <img src="img/ccnb.png" alt="Clirap">
+                    </div>
+                    <div class="education-cards-container-card-container">
+                        <h3>2021 • <i>en cours</i></h3>
+                        <p class="ecucation-cards-container-card-container-description">
+                            <b>DEC (Diplôme d'études collégiales) TECHNOLOGIE DE L'INFORMATION ET DES COMMUNICATIONS
+                                (TIC)</b>
+                        <p>Institut Universitaire de la Côte • Douala</p>
+                        <h4>Diplôme délivré par le Collège communautaire du Nouveau-Brunswick (CCNB-Canada)</h4>
+                        </p>
+                    </div>
+                </div>
+                <div class="education-cards-container-card">
+                    <div class="education-cards-container-card-img">
+                        <img src="img/clirap.png" alt="Clirap">
+                    </div>
+                    <div class="education-cards-container-card-container">
+                        <h3>2020 • 2021</h3>
+                        <p class="ecucation-cards-container-card-container-description">
+                            <b><a href="https://drive.google.com/file/d/19BSao3K4I22ht_T8neRqURQU7KzvXidO/view?usp=sharing"
+                                    target="_blank">B2 - LANGUE ITALIENNE</a></b>
+                        <p>Clirap Educationnal • Yaoundé</p>
+                        <h4>Diplôme délivré par l' Université de Rome 3 ( en Italie )</h4>
+                        </p>
+                    </div>
+                </div>
+                <div class="education-cards-container-card">
+                    <div class="education-cards-container-card-img">
+                        <img src="img/uy1.png" alt="UY1">
+                    </div>
+                    <div class="education-cards-container-card-container">
+                        <h3>2019 • 2020</h3>
+                        <p class="ecucation-cards-container-card-container-description">
+                            <b>INFORMATIQUE NIVEAU 1</b>
+                        <p>Université de Yaoundé 1 • Yaoundé</p>
+                        </p>
+                    </div>
+                </div>
+                <div class="education-cards-container-card">
+                    <div class="education-cards-container-card-img">
+                        <img src="img/lybibaf-ndg.png" alt="Lybibaf Ndiengdam">
+                    </div>
+                    <div class="education-cards-container-card-container">
+                        <h3>2018 • 2019</h3>
+                        <p class="ecucation-cards-container-card-container-description">
+                            <b><a href="https://drive.google.com/file/d/1zj25lC7wQiTWIWn_ZrDjoAzrn3VzSiiA/view?usp=sharing"
+                                    target="_blank">BACCALAUREAT C</a></b>
+                        <p>Lycée bilingue de Bafoussam ndiengdam • Bafoussam</p>
+                        <h4>Diplôme délivré par le MINESEC</h4>
+                        </p>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
@@ -637,17 +653,18 @@
                         target="_blank">OpenClassrooms</a> et aussi sur <a href="https://www.udemy.com/"
                         target="_blank">Udemy</a> où j'ai acquis la majorité des bases de mes connaissances sur
                     le web. <i>Consultez les en cliquant sur l'image :)</i> </h2>
-                <a href="https://drive.google.com/drive/folders/1mTQ98vR_POncLTRs8jGD4eTJoI5U5jHU?usp=sharing"
-                    target="_blank" class="oc-cert">
-                    <img src="img/oc.png" alt="Certifications OpenClassrooms">
-                    <span>Consultez mes certifications OpenClassrooms</span>
-                </a>
+                <div class="cert">
+                    <a href="https://drive.google.com/drive/folders/1mTQ98vR_POncLTRs8jGD4eTJoI5U5jHU?usp=sharing"
+                        target="_blank">
+                        <img src="img/oc.png" alt="Certifications OpenClassrooms">
+                        <span>Consultez mes certifications OpenClassrooms</span>
+                    </a>
 
-                <a href="https://drive.google.com/drive/folders/1iBz8zi92uPJse4o6n4iwDDvQd-atU6OH" target="_blank"
-                    class="oc-cert">
-                    <img src="img/udemy.jpg" alt="Certifications Udemy">
-                    <span>Consultez mes certifications Udemy</span>
-                </a>
+                    <a href="https://drive.google.com/drive/folders/1iBz8zi92uPJse4o6n4iwDDvQd-atU6OH" target="_blank">
+                        <img src="img/udemy.jpg" alt="Certifications Udemy">
+                        <span>Consultez mes certifications Udemy</span>
+                    </a>
+                </div>
             </div>
             <div class="other-container-contact">
                 <h1>Contactez moi</h1>
@@ -667,6 +684,7 @@
             </div>
         </div>
     </div>
+
     <p class="thanks">Un grand merci a <a href="https://grafikart.fr/" target="_blank">Grafikart</a> et a <a
             href="https://openclassrooms.com/fr/" target="_blank">Openclassrooms</a> pour mes connaissances acquises</p>
     <footer class="footer" id="footer">
