--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
             <li><a href="#experience">Expérience</a></li>
             <li><a href="#education">Education</a></li>
             <li><a href="#other">Autres</a></li>
-            <li><a href="https://drive.google.com/file/d/1tj6WwxPgAyW0Zic0zfXo5LKliPvxlxab/view?usp=drivesdk"
+            <li><a href="https://drive.google.com/file/d/1nNOt0aWu3KuiO2C9bX13_pKGWVmtcfta/view?usp=sharing"
                     target="_blank">
                     <ion-icon name="document-outline"></ion-icon>
                 </a></li>
@@ -117,7 +117,7 @@
             <li><a href="#other">Autres</a></li>
         </ul>
         <ul class="navigation-socials">
-            <li><a href="https://drive.google.com/file/d/1tj6WwxPgAyW0Zic0zfXo5LKliPvxlxab/view?usp=drivesdk"
+            <li><a href="https://drive.google.com/file/d/1nNOt0aWu3KuiO2C9bX13_pKGWVmtcfta/view?usp=sharing"
                     target="_blank">
                     <ion-icon name="document-outline" alt="dasd"></ion-icon>
                 </a></li>
@@ -401,7 +401,7 @@
                                     accomplissement de cette dite
                                     tache.
                                 </h4>
-                                <div><button>SVELTE JS</button> <button>Vue js</button> <button>SCSS</button>
+                                <div><button>SVELTE JS</button> <button>SCSS</button>
                                     <button>API</button>
                                     <button>TRVAIL EN
                                         EQUIPE</button> <button>git</button> <button>github</button>
@@ -682,7 +682,7 @@
                     <a href="https://www.fiverr.com/ln_dev7" target="_blank"><img src="img/fiverr.png" alt="fiverr"></a>
                     <a href="https://www.malt.fr/profile/lndev" target="_blank"><img src="img/malt.png" alt="malt"></a>
                 </div>
-                <a href="https://drive.google.com/file/d/1tj6WwxPgAyW0Zic0zfXo5LKliPvxlxab/view?usp=drivesdk"
+                <a href="https://drive.google.com/file/d/1nNOt0aWu3KuiO2C9bX13_pKGWVmtcfta/view?usp=sharing"
                     target="_blank" class="other-container-cv">TELECHARGER MON CV</a>
             </div>
         </div>
