update link linkedin

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
             <li><a href="https://www.twitch.tv/ln_dev7" target="_blank">
                     <ion-icon name="logo-twitch"></ion-icon>
                 </a></li>
-            <li><a href="www.linkedin.com/in/lndev" target="_blank">
+            <li><a href="https://www.linkedin.com/in/lndev" target="_blank">
                     <ion-icon name="logo-linkedin"></ion-icon>
                 </a></li>
             <li><a href="https://www.instagram.com/invites/contact/?i=md4mtcvgsrg4&utm_content=7zkbn8h" target="_blank">
@@ -133,7 +133,7 @@
             <li><a href="https://www.twitch.tv/ln_dev7" target="_blank">
                     <ion-icon name="logo-twitch"></ion-icon>
                 </a></li>
-            <li><a href="www.linkedin.com/in/lndev" target="_blank">
+            <li><a href="https://www.linkedin.com/in/lndev" target="_blank">
                     <ion-icon name="logo-linkedin"></ion-icon>
                 </a></li>
             <li><a href="https://www.instagram.com/invites/contact/?i=md4mtcvgsrg4&utm_content=7zkbn8h" target="_blank">
@@ -697,7 +697,7 @@
                 <a href="https://twitter.com/ln_dev7?s=09" target="_blank">
                     <ion-icon name="logo-twitter"></ion-icon>
                 </a>
-                <a href="www.linkedin.com/in/lndev" target="_blank">
+                <a href="https://www.linkedin.com/in/lndev" target="_blank">
                     <ion-icon name="logo-linkedin"></ion-icon>
                 </a>
                 <a href="https://youtube.com/channel/UCocpsPbVlb4bGYZKa-VXySg" target="_blank">
