--- a/index.html
+++ b/index.html
@@ -11,15 +11,15 @@
     <meta name="twitter:title" content="💻 NGOYA LEONEL️ 🌴️">
     <meta name="twitter:site" content="@ln_dev7">
     <meta name="twitter:creator" content="@ln_dev7">
-    <meta name="twitter:description" content="Développeur FrontEnd">
+    <meta name="twitter:description" content="Développeur FrontEnd - Intégrateur Web,">
     <meta name="twitter:image" content="img/ln.png">
     <meta name="twitter:card" content="img/lndev.png">
     <meta name="description" content="Développeur FrontEnd">
-    <meta name="keywords" content="LN Developemrnt, NGOYA, Leonel, Développeur Freelance, Développeur Web, Camerounais">
+    <meta name="keywords" content="LN Developemrnt, NGOYA, Leonel, Développeur FrontEnd, Intégrateur Web, Camerounais">
     <!--Open Graph-->
     <meta property="og:image" content="img/ln.png">
     <meta property="og:title" content="💻 NGOYA LEONEL️ 🌴️">
-    <meta property="og:description" content="Je développe les applications web et android, de la manière la plus créative possible:">
+    <meta property="og:description" content="Je développe des sites et applications web responsive dans lesquels j'utilise mon inspiration pour avoir une interface belle et compréhensible par l'utilisateur tout en respectant les demandes des clients et dans certains cas en communiquant avec des API.">
     <meta name="author" content="NGOYA Leonel">
     <meta property="og:url" content="https://lndev.com/">
     <meta property="og:site_name" content="💻 NGOYA LEONEL️ 🌴">
