ajout des nouveaux sillest

--- a/index.html
+++ b/index.html
@@ -243,6 +243,13 @@
                     </div>
                 </div>
                 <div class="skillest-cards-container-card">
+                    <ion-icon name="phone-portrait" class="circle"></ion-icon>
+                    <p>DEVELOPPEMENT MOBILE</p>
+                    <div>
+                        <span><img src="img/flutter.png" alt="flutter"></span>
+                    </div>
+                </div>
+                <div class="skillest-cards-container-card">
                     <ion-icon name="bonfire" class="circle"></ion-icon>
                     <p>DEVELOPPEMENT LOGICIEL & BACKEND</p>
                     <div>
@@ -253,8 +260,11 @@
                     <ion-icon name="laptop-outline" class="circle"></ion-icon>
                     <p>OUTILS</p>
                     <div>
+                        <span><img src="img/firebase.png" alt="firebase"></span>
                         <ion-icon name="logo-github"></ion-icon>
                         <ion-icon name="logo-figma"></ion-icon>
+                        <span><img src="img/vscode.png" alt="vscode"></span>
+                        <span><img src="img/webstorm.png" alt="webstorm"></span>
                     </div>
                 </div>
             </div>
