--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
     <div class="about" id="about">
         <h1 class="about-title">À propos de moi</h1>
         <h2 class="about-about">
-            Je suis un étudiant de 18 ans et développeur front-end web vivant au Cameroun.<br> Je me veux d'être le plus créatif possible en utilisant mon imagination et mes capacités intellectuelles dans mon travail.<br> Mon but est de rendre un site
+            Je suis un étudiant de 18 ans et <b>développeur front-end web et flutter</b> vivant au Cameroun.<br> Je me veux d'être le plus créatif possible en utilisant mon imagination et mes capacités intellectuelles dans mon travail.<br> Mon but est de rendre un site
             le plus beau et attirant possible.
         </h2>
         <h2 class="about-languages-title">Langues parlées</h2>
@@ -288,9 +288,9 @@
                 </div>
                 <div class="services-cards-container-card">
                     <ion-icon name="globe-outline" class="circle"></ion-icon>
-                    <h2>INTEGRATION WEB</h2>
+                    <h2>INTEGRATION</h2>
                     <p>
-                        Je concois aussi des templates HTML / CSS / JS reutilisable dans vos applications web.
+                        Je concois aussi des templates HTML / CSS / JS ainsi que Flutter reutilisable dans vos applications.
                     </p>
                 </div>
             </div>
