box shadow sur le boutton de l' xp mobile

--- a/index.html
+++ b/index.html
@@ -658,8 +658,10 @@
     </div>
 
     <script>
-        var splide = new Splide( '.splide' );
-        splide.mount();
+        var elms = document.getElementsByClassName( 'splide' );
+        for ( var i = 0; i < elms.length; i++ ) {
+            new Splide( elms[ i ] ).mount();
+        }
     </script>
 </body>
 
