ajout de ln-react-blog

--- a/index.html
+++ b/index.html
@@ -438,6 +438,9 @@
                 <a href="https://login-page1.vercel.app/" target="_blank">
                     <img src="projets/loginpage-1.png" alt="loginpage-1">
                 </a>
+                <a href="https://ln-react-blog.vercel.app/" target="_blank">
+                    <img src="projets/ln-react-blog.png" alt="ln-react-blog">
+                </a>
                 <a href="https://app-expenses-delta.vercel.app/" target="_blank">
                     <img src="projets/app-expenses.png" alt="app-expenses">
                 </a>
