--- a/index.html
+++ b/index.html
@@ -584,7 +584,7 @@
         <div class="other-container">
             <div class="other-container-certification">
                 <h1>Mes certifications</h1>
-                <h2>J'ai eu à faire des formations sur <a href="https://openclassrooms.com/fr/" target="_blank">OpenClassrooms</a> et aussi sur <a href="https://www.udemy.com/" target="_blank">Udemy</a> où j'ai acquis la majorité des bases de mes connaissances
+                <h2>J'ai eu à faire des formations en ligne où j'ai acquis la majorité des bases de mes connaissances
                     sur le web. <i>Consultez les en cliquant sur l'image :)</i> </h2>
                 <div class="cert">
                     <a href="https://drive.google.com/drive/folders/1mTQ98vR_POncLTRs8jGD4eTJoI5U5jHU?usp=sharing" target="_blank">
