ajout de php aux skills

--- a/index.html
+++ b/index.html
@@ -180,9 +180,6 @@
                 <h1 class="header-container-title">Salut, moi c'est Leonel NGOYA<img src="img/Hi.gif"></h1>
                 <h1 class="header-container-subtitle">Développeur FrontEnd</h1>
                 <h2>Ici c'est mon site personnel, où vous y trouverez toutes les informations me concernant.</h2>
-                <img src="img/LN.png" alt="logo" class="logo">
-                <div class="fade-box"></div>
-                <p class="fade-text">Appelle moi LN</p>
             </div>
         </div>
     </header>
@@ -257,6 +254,7 @@
                     <p>DEVELOPPEMENT LOGICIEL & BACKEND</p>
                     <div>
                         <span><img src="img/csharp.png" alt="csharp"></span>
+                        <span><img src="img/php.png" alt="php"></span>
                     </div>
                 </div>
                 <div class="skillest-cards-container-card">
